--- a/section.html
+++ b/section.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="app">
-        <select name="" v-model="arr" id="" multiple>
+        <select name="" v-model="arr" id="">
             <option value="a">1</option>
             <option value="b">2</option>
             <option value="c">3</option>
