--- a/fetch.html
+++ b/fetch.html
@@ -10,7 +10,7 @@
 
 <body>
     <img src="" alt="" id="img1">
-    <script src="node_modules/vue/dist/vue.js"></script>
+    <!-- <script src="node_modules/vue/dist/vue.js"></script> -->
     <script>
         fetch("./package.json").then((res) => {
             res.json().then((data) => {
